--- a/Blue/popup.html
+++ b/Blue/popup.html
@@ -7,7 +7,10 @@
     </head>
     <body>
         <div class="title">
-            <h1>Garrassi</h1>
+            <h1>BLUE</h1>
         </div>
+        <audio src="/music/disfigure.mp3" controls>	
+            <p>Fallback content goes here.</p>
+        </audio>
     </body>
 </html>
