[ADD] working updated

--- a/Blue/popup.html
+++ b/Blue/popup.html
@@ -12,15 +12,19 @@
             <img id="logo" src="icon/Blue/template_1.png" alt="zorotl">
         </div>
         
-        <audio class="audio_player" src="/music/disfigure.mp3" controls>	
+        <audio class="audio_player" src="/music/blue.mp3" controls>	
             <p>Fallback content goes here.</p>
         </audio>
 
         <button type="button" id="clickButton">Click me</button>
-        <p>You obliterated: <a id="clicks">0</a> Zorotl</p>
+        <p>You found: <a id="clicks">0</a> Zorotl</p>
 
           <script  src="js/player.js"></script>
           <script  src="js/button.js"></script>
         <img id="zorotl_oblit" src="images/zorotl.png" alt="zorotl">
+
+        <button type="button" id="rancon_button">PAY 5 Zorotl</button>
+
+        <button type="button" id="quizz_button"> Go to the quizz</button>
     </body>
 </html>
