--- a/Blue/popup.html
+++ b/Blue/popup.html
@@ -17,14 +17,18 @@
         </audio>
 
         <button type="button" id="clickButton">Click me</button>
-        <p>You found: <a id="clicks">0</a> Zorotl</p>
+        <div id="timer"></div>
+        <p>You Have: <a id="clicks">0</a> Zorotl</p>
 
-          <script  src="js/player.js"></script>
-          <script  src="js/button.js"></script>
+          
         <img id="zorotl_oblit" src="images/zorotl.png" alt="zorotl">
 
-        <button type="button" id="rancon_button">PAY 5 Zorotl</button>
+        <button type="button" id="rancon_button">PAY a Zorotl</button>
 
         <button type="button" id="quizz_button"> Go to the quizz</button>
+
+        <script  src="js/button.js"></script>
+        <script  src="js/player.js"></script>
+        
     </body>
 </html>
