[ADD] working FINAL

--- a/Blue/popup.html
+++ b/Blue/popup.html
@@ -22,7 +22,7 @@
           
         <img id="zorotl_oblit" src="images/zorotl.png" alt="zorotl">
 
-        <button type="button" id="rancon_button">PAY a Zorotl</button>
+        <button type="button" id="rancon_button">Sacrifice a Zorotl</button>
 
         <button type="button" id="quizz_button"> Go to the quizz</button>
 
